force-app/main/default/classes/Controllers Apex/objects/Candidate__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <formula>First_Name__c +&quot; &quot;+ Last_Name__c</formula>
    <label>Candidate Name</label>
    <type>Text</type>
</CustomField>