force-app/main/default/classes/Controllers Apex/objects/Candidate__c/fields/Confirm_Password__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Password__c</fullName>
    <label>Confirm Password</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>