force-app/main/default/classes/Controllers Apex/objects/Candidate__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>