force-app/main/default/classes/Controllers Apex/objects/Candidate__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>