force-app/main/default/classes/Controllers Apex/objects/Candidate__c/fields/US_Citizen__c.field-meta.xml
<CustomField>
    <fullName>US_Citizen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>US Citizen</label>
    <type>Checkbox</type>
</CustomField>