force-app/main/default/classes/Controllers Apex/objects/Candidate__c/fields/Visa_Required__c.field-meta.xml
<CustomField>
    <fullName>Visa_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visa Required</label>
    <type>Checkbox</type>
</CustomField>