force-app/main/default/classes/Controllers Apex/objects/Candidate__c/validationRules/passwordCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>passwordCheck</fullName>
    <active>true</active>
    <errorConditionFormula>Password__c  &lt;&gt;   Confirm_Password__c</errorConditionFormula>
    <errorDisplayField>Confirm_Password__c</errorDisplayField>
    <errorMessage>Password does not match.</errorMessage>
</ValidationRule>